--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
 <body>
     <header>
         <h1>ClientAPI</h1>
+        <a href="connexion.html" alt="lien vers la connexion">Connexion</a>
     </header>
     <div>
     <sidebar>
@@ -43,7 +44,7 @@
     </sidebar>
     <main>
         <!--catégorie + ID de la catégorie-->
-        <h2>Produit de "Titre de la catégorie"</h2>
+        <h2>Produit de <span class="categories-title">Titre de la catégorie</span></h2>
         <ul class="produits-list">
         <li><a href="#">Produit 1</a></li>
         <li><a href="#">Produit 2</a></li>
