--- a/connexion.html
+++ b/connexion.html
@@ -5,13 +5,18 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Qui suis-je ?</title>
+    <script defer src="connexion.js"></script>
 </head>
 <body>
     <form action="" class="connexion">
-        <input type="text" name="login" placeholder="Votre login">
-        <input type="password" name="password" placeholder="Votre mot de passe">
+        <input type="text" class="login" placeholder="Votre login">
+        <input type="password" class="password" placeholder="Votre mot de passe">
         <input type="hidden" name="ident">
         <button>S'identifier</button>
     </form>
 </body>
 </html>
+
+// add event lisetener sumbmit 
+// récupérer les infos des champs
+// créer un objet JSON 
